@@ -29,6 +29,8 @@ public:
 
   void DoWork();
 
+  void SetVolume(long nVolume);
+
   CDVDPacketQueue m_packetQueue;
 
   CodecID m_codec;    // codec id of the current active stream
